MOD: updated creation, jlink and packager scripts